--- a/frontEnd/IAFP/package.json
+++ b/frontEnd/IAFP/package.json
@@ -5,11 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npx vite build",
+     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "vite": "^5.4.19",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
