--- a/frontEnd/IAFP/package.json
+++ b/frontEnd/IAFP/package.json
@@ -24,7 +24,6 @@
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.22",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.2",
@@ -32,7 +31,8 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
-    "vite": "^7.2.4"
+    "vite": "^6.0.0",
+    "@vitejs/plugin-react": "^4.3.4"
   },
   "engines": {
     "node": "20.x"
